[package]
name = "perspective-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["tokio"]
# sync = ["reqwest/blocking"]

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", default-features = false, features = ["macros"], optional = true }
serde = { version = "*", features = ["derive"] }
derive_builder = "*"
log = "*"
futures = "*"
thiserror = "*"